tests/invalid_syntax/test_illegal_char.aphi
/*
Demonstrates: Illegal character not in Ampliphi alphabet
*/

int x$;
